7056328: JSR 292 invocation sometimes fails in adapters for types not on boot class path

Reviewed-by: never